--- a/torchtitan/models/llama3/train_configs/llama3_8b.toml
+++ b/torchtitan/models/llama3/train_configs/llama3_8b.toml
@@ -18,7 +18,7 @@ save_tb_folder = "tb"
 [model]
 name = "llama3"
 flavor = "8B"
-tokenizer_path = "./assets/tokenizer/Llama-3.1-8B"
+tokenizer_path = "./assets/tokenizer/Meta-Llama-3-8B"
 # converters = ["float8"]
 
 [optimizer]
