--- a/torchtitan/experiments/qwen3_moe/train_configs/debug.toml
+++ b/torchtitan/experiments/qwen3_moe/train_configs/debug.toml
@@ -52,7 +52,7 @@ tensor_parallel_degree = 1
 enable_async_tensor_parallel = false
 pipeline_parallel_degree = 1
 context_parallel_degree = 1
-expert_parallel_degree = 1
+expert_parallel_degree = 8
 
 [checkpoint]
 enable_checkpoint = true
@@ -72,3 +72,8 @@ enable_fsdp_float8_all_gather = false
 precompute_float8_dynamic_scale_for_fsdp = false
 filter_fqns = ["output", "router.gate"]
 moe_fqns = ["experts"]
+
+[distributed_debug]
+enable = true
+world_size = 8
+rank = 0
